--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,11 @@
   text-align: center;
   margin: 30px 0;
 }
+a {
+  color: #393e46;
+}
+
+.App {
+  text-transform: lowercase;
+  line-height: 1.8;
+}
